--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "file-loader": "^0.11.1",
     "glob": "^7.1.1",
     "js-yaml": "^3.8.4",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.2",
     "path-complete-extname": "^0.1.0",
     "postcss-loader": "^2.0.5",
@@ -26,6 +28,7 @@
     "react-dom": "^15.5.4",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
+    "superagent": "^3.5.2",
     "webpack": "^2.5.1",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0"
